{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 43,
  "lineage": "449deea8-fd92-01f6-6d61-51e3d4fbe5e8",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:103316240126:instance/i-0afba1fee4260a692",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afba1fee4260a692",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b29669ca3f186f2",
            "private_dns": "ip-10-0-2-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-076cbca99c7057963",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-04e70a96f54c19113"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a0f100ab33d33e2",
            "tags": {
              "Name": "Backend-NodeJS"
            },
            "tags_all": {
              "Name": "Backend-NodeJS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e70a96f54c19113"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.private"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:103316240126:instance/i-0d21239475d1bf707",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d21239475d1bf707",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09310c5dfb22a01db",
            "private_dns": "ip-10-0-2-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00a75294ba00bf6da",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-04e70a96f54c19113"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a0f100ab33d33e2",
            "tags": {
              "Name": "Database-MySQL"
            },
            "tags_all": {
              "Name": "Database-MySQL"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e70a96f54c19113"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.private"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:103316240126:instance/i-0a240d460847e9cd2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a240d460847e9cd2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec8adbbdcb85aac1",
            "private_dns": "ip-10-0-1-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.23",
            "public_ip": "3.222.117.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ebb21d6a6e3b5ce",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0154ca9f1e0c2095b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa9fb7a617535581",
            "tags": {
              "Name": "Frontend-ReactJS"
            },
            "tags_all": {
              "Name": "Frontend-ReactJS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0154ca9f1e0c2095b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:103316240126:instance/i-00616d25ffcbc41fd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00616d25ffcbc41fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5258b677a28ed1f",
            "private_dns": "ip-10-0-2-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-050c4cc18a06b1cc7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-04e70a96f54c19113"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a0f100ab33d33e2",
            "tags": {
              "Name": "Monitoring"
            },
            "tags_all": {
              "Name": "Monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e70a96f54c19113"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.private"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "reverse_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:103316240126:instance/i-07b77845d001289ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b77845d001289ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eda837ea1eb2000e",
            "private_dns": "ip-10-0-1-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.117",
            "public_ip": "44.223.109.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d0b0eed88d1c296c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0154ca9f1e0c2095b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa9fb7a617535581",
            "tags": {
              "Name": "Reverse-Proxy"
            },
            "tags_all": {
              "Name": "Reverse-Proxy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0154ca9f1e0c2095b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103316240126:internet-gateway/igw-0c9a88a4a915259af",
            "id": "igw-0c9a88a4a915259af",
            "owner_id": "103316240126",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-011a6a5e90ffcc312"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103316240126:route-table/rtb-0df445a0029e89460",
            "id": "rtb-0df445a0029e89460",
            "owner_id": "103316240126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9a88a4a915259af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-011a6a5e90ffcc312"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072d4274b9e0be45a",
            "route_table_id": "rtb-0df445a0029e89460",
            "subnet_id": "subnet-0aa9fb7a617535581"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103316240126:subnet/subnet-07a0f100ab33d33e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a0f100ab33d33e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103316240126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-011a6a5e90ffcc312"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103316240126:subnet/subnet-0aa9fb7a617535581",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa9fb7a617535581",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "103316240126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-011a6a5e90ffcc312"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103316240126:vpc/vpc-011a6a5e90ffcc312",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bc7cfa5b3631a156",
            "default_route_table_id": "rtb-05ee0866929286184",
            "default_security_group_id": "sg-0297fee9e04a5f1e3",
            "dhcp_options_id": "dopt-0d69bda5ce1b91c6a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-011a6a5e90ffcc312",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ee0866929286184",
            "owner_id": "103316240126"
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103316240126:security-group/sg-04e70a96f54c19113",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e70a96f54c19113",
            "ingress": [
              {
                "cidr_blocks": [
                  "92.141.143.116/32"
                ],
                "description": null,
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "92.141.143.116/32"
                ],
                "description": null,
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "92.141.143.116/32"
                ],
                "description": null,
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "terraform-20250506120504520500000003",
            "name_prefix": "terraform-",
            "owner_id": "103316240126",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011a6a5e90ffcc312"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103316240126:security-group/sg-0154ca9f1e0c2095b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0154ca9f1e0c2095b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.141.143.116/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250506120504495900000002",
            "name_prefix": "terraform-",
            "owner_id": "103316240126",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011a6a5e90ffcc312"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_from_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3350007872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e70a96f54c19113",
            "security_group_rule_id": "sgr-061e3128ff5823ab5",
            "self": false,
            "source_security_group_id": "sg-0154ca9f1e0c2095b",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.private",
            "module.security_groups.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_to_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-812322382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0154ca9f1e0c2095b",
            "security_group_rule_id": "sgr-0beb53993a10b97f4",
            "self": false,
            "source_security_group_id": "sg-04e70a96f54c19113",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.private",
            "module.security_groups.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysql_within_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1092183199",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e70a96f54c19113",
            "security_group_rule_id": "sgr-052937039c7fe5c44",
            "self": false,
            "source_security_group_id": "sg-04e70a96f54c19113",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.private"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_from_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1385401928",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e70a96f54c19113",
            "security_group_rule_id": "sgr-046fca51a2c37705f",
            "self": false,
            "source_security_group_id": "sg-0154ca9f1e0c2095b",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.private",
            "module.security_groups.aws_security_group.public"
          ]
        }
      ]
    }
  ]
}